--- a/package.json
+++ b/package.json
@@ -1,35 +1,29 @@
 {
-  "name": "OpenShift-Sample-App",
+  "name": "github-authenticator",
   "version": "1.0.0",
-  "description": "OpenShift Sample Application",
-  "keywords": [
-    "OpenShift",
-    "Node.js",
-    "application",
-    "openshift"
-  ],
-  "author": {
-    "name": "OpenShift",
-    "email": "ramr@example.org",
-    "url": "http://www.openshift.com/"
+  "description": "The OpenShift `nodejs` cartridge documentation can be found at:",
+  "main": "index.js",
+  "dependencies": {
+    "body-parser": "^1.9.2",
+    "compression": "^1.2.0",
+    "express": "^4.10.2",
+    "method-override": "^2.3.0",
+    "pg": "^2.0.0",
+    "sequelize": "^2.0.0-rc2"
   },
-  "homepage": "http://www.openshift.com/",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/openshift/origin-server"
-  },
-
   "engines": {
     "node": ">= 0.6.0",
     "npm": ">= 1.0.0"
   },
-
-  "dependencies": {
-    "express": "~3.4.4"
-  },
   "devDependencies": {},
-  "bundleDependencies": [],
-
-  "private": true,
-  "main": "server.js"
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "ssh://546e81c0e0b8cd7fc4000050@githubauth-framp.rhcloud.com/~/git/githubauth.git/"
+  },
+  "author": "Federico Rampazzo <frampone@gmail.com>",
+  "license": "ISC"
 }
