--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "express": "^4.10.2",
     "method-override": "^2.3.0",
     "pg": "^2.0.0",
+    "request": "^2.48.0",
     "sequelize": "^2.0.0-rc2"
   },
   "engines": {
